2001-09-29  Kevin Vandersloot <kfv101@psu.edu>

	Initial port to GNOME 2.0 platform. Too much changes to detail

	* proctable.c: port to GtkTreeview from e-tree

2001-09-25  Kevin Vandersloot <kfv101@psu.edu>

	* release 0.10.3

	* interface.c: comment out the "about process" item as it is
	stupid right now. Maybe in the future when we get a good
	help browser.

2001-09-25  Kevin Vandersloot <kfv101@psu.edu>

	* prettytable.c: change GDK_INTERP_NEAREST to HYPER for
	better scaling of the icons.

2001-09-25  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: make the minimum update interval for
	the process viewer be 1 sec otherwise I see crashing on
	startup (and it uses too much cpu otherwise)

2001-09-22  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: don't load the desktop files twice

	* interface.c: fix lines needing removal so this compiles

2001-09-22  Kevin Vandersloot <kfv101@psu.edu>

	* load-graph.c: check to see if load-graph is not NULL in
	load-graph[start, stop]. Do this just so it's easy to not
	show the sys tab for testing purposes

2001-09-22  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: make the disks frame seperated from the graphs
	by a vpaned
	
	* procman.[c,h]: save the paned pos

2001-09-19  Kjartan Maraas  <kmaraas@gnome.org>

	* load-graph.c: Remove extra #include <config.h>
	* prettytable.c: Move #include <config.h> to the top
	to make i18n work. Please try now.
 	
2001-09-19  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c (free_info): call gdk_pixbuf_unref to free the 
	pixbuf and a memory leak.

2001-09-19  Kevn Vandersloot <kfv101@psu.edu>

	* callbacks.c (cb_simple_dialog_close): call gtk_main_quit
	to close the app

	* interface.c: some reshuffling of the UI code. don't call
	gtk_widget_show on the main window untill all updating
	has been done.
	Improve the ctrl-alt-del dialog by giving a title

	* prettytable.c: call gettext () on the string since
	the app names arent getting translated. Still doesn't 
	work.
