@@ -186,3 +186,25 @@ su_run_with_password (gchar *exec_path, gchar *password)
 	return exec_su (exec_path, "root", password);
 }
 
+gchar *
+get_size_string (gint size)
+{
+	gfloat fsize;
+
+	fsize = (gfloat) size;
+	if (fsize < 1024.0)
+		return g_strdup_printf (_("%d bytes"), (int)fsize);
+	fsize /= 1024.0;
+	if (fsize < 1024.0) 
+		return g_strdup_printf (_("%d K"), (int)fsize);
+		
+	fsize /= 1024.0;
+	if (fsize < 1024.0)
+		return g_strdup_printf (_("%.0f MB"), fsize);
+	
+	fsize /= 1024.0;
+	return g_strdup_printf (_("%.0f GB"), fsize);
+
+}
+
+
