@@ -1,5 +1,13 @@
 2001-09-29  Kevin Vandersloot <kfv101@psu.edu>
 
+	* util.c (get_size_string): put this function here since I 
+	have it in about three different places already
+
+	* proctable.c: make the mem column a string and use 
+	get_size_string for nice display
+
+2001-09-29  Kevin Vandersloot <kfv101@psu.edu>
+
 	Initial port to GNOME 2.0 platform. Too much changes to detail
 
 	* proctable.c: port to GtkTreeview from e-tree
